--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="card-body">
                 <h4 class="card-title">Generate multiplication table</h4>
 
-                <a class="btn btn-indigo btn-sm">DEMO</a>
+                <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_1/" target="_blank">DEMO</a>
             </div>
             <div class="card-footer text-muted indigo white-text">
-                <a class="mb-0" href="https://anjacmca.000webhostapp.com/WT/" target="_blank">APP CODE</a>
+                <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_1" target="_blank">APP CODE</a>
             </div>
         </div>
         <!--/.Panel-->
@@ -78,10 +78,10 @@
         <div class="card-body">
             <h4 class="card-title">Swap two numbers using GET/POST method</h4>
 
-            <a class="btn btn-indigo btn-sm">DEMO</a>
+            <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_2/" target="_blank">DEMO</a>
         </div>
         <div class="card-footer text-muted indigo white-text">
-            <a class="mb-0" href="https://anjacmca.000webhostapp.com/WT2/" target="_blank">APP CODE</a>
+            <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_2" target="_blank">APP CODE</a>
         </div>
     </div>
     <!--/.Panel-->
@@ -98,19 +98,38 @@
         <div class="card-body">
             <h4 class="card-title">Perform the sum of digits using GET/POST method</h4>
 
-            <a class="btn btn-indigo btn-sm">DEMO</a>
+            <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_3/" target="_blank">DEMO</a>
         </div>
         <div class="card-footer text-muted indigo white-text">
-            <a class="mb-0" href="https://anjacmca.000webhostapp.com/WT3/" target="_blank">APP CODE</a>
+            <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_3" target="_blank">APP CODE</a>
         </div>
     </div>
+
     <!--/.Panel-->
 
     </div>
     <!-- Grid column -->
 
     </div>
+    <div class="row">
+        
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-6  cdiv">
+        <!--Panel-->
+        <div class="card text-center cardh">
+             <div class=" card-header indigo white-text">
+            Lab assistant 4
+        </div>
+        <div class="card-body">
+            <h4 class="card-title">String Manipulation</h4>
 
+            <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_4/" target="_blank">DEMO</a>
+        </div>
+        <div class="card-footer text-muted indigo white-text">
+            <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_4" target="_blank">APP CODE</a>
+        </div>
+    </div>
+    </div>
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
