Lab assistant 5 added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="card indigo text-center z-depth-2">
                 <h2 class="card-title" style="margin : 10px;">web technology lab</h2>
             </div>
-        </div>       
+        </div>
     </div>
 
     <div class="row">
@@ -52,83 +52,111 @@
         <div class="col-lg-4 col-md-6  cdiv">
             <!--Panel-->
             <div class="card text-center cardh">
-             <div class=" card-header indigo white-text">
-                Lab assistant 1
+                <div class=" card-header indigo white-text">
+                    Lab assistant 1
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Generate multiplication table</h4>
+
+                    <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_1/"
+                        target="_blank">DEMO</a>
+                </div>
+                <div class="card-footer text-muted indigo white-text">
+                    <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_1"
+                        target="_blank">APP CODE</a>
+                </div>
             </div>
-            <div class="card-body">
-                <h4 class="card-title">Generate multiplication table</h4>
+            <!--/.Panel-->
 
-                <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_1/" target="_blank">DEMO</a>
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-lg-4 col-md-6  cdiv">
+            <!--Panel-->
+            <div class="card text-center cardh">
+                <div class=" card-header indigo white-text">
+                    Lab assistant 2
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Swap two numbers using GET/POST method</h4>
+
+                    <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_2/"
+                        target="_blank">DEMO</a>
+                </div>
+                <div class="card-footer text-muted indigo white-text">
+                    <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_2"
+                        target="_blank">APP CODE</a>
+                </div>
             </div>
-            <div class="card-footer text-muted indigo white-text">
-                <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_1" target="_blank">APP CODE</a>
+            <!--/.Panel-->
+
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-lg-4 col-md-6  cdiv">
+            <!--Panel-->
+            <div class="card text-center cardh">
+                <div class=" card-header indigo white-text">
+                    Lab assistant 3
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Perform the sum of digits using GET/POST method</h4>
+
+                    <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_3/"
+                        target="_blank">DEMO</a>
+                </div>
+                <div class="card-footer text-muted indigo white-text">
+                    <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_3"
+                        target="_blank">APP CODE</a>
+                </div>
             </div>
-        </div>
-        <!--/.Panel-->
 
-    </div>
-    <!-- Grid column -->
-    <!-- Grid column -->
-    <div class="col-lg-4 col-md-6  cdiv">
-        <!--Panel-->
-        <div class="card text-center cardh">
-                     <div class=" card-header indigo white-text">
-            Lab assistant 2
-        </div>
-        <div class="card-body">
-            <h4 class="card-title">Swap two numbers using GET/POST method</h4>
+            <!--/.Panel-->
 
-            <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_2/" target="_blank">DEMO</a>
         </div>
-        <div class="card-footer text-muted indigo white-text">
-            <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_2" target="_blank">APP CODE</a>
-        </div>
-    </div>
-    <!--/.Panel-->
-
-    </div>
-    <!-- Grid column -->
-    <!-- Grid column -->
-    <div class="col-lg-4 col-md-6  cdiv">
-        <!--Panel-->
-        <div class="card text-center cardh">
-             <div class=" card-header indigo white-text">
-            Lab assistant 3
-        </div>
-        <div class="card-body">
-            <h4 class="card-title">Perform the sum of digits using GET/POST method</h4>
-
-            <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_3/" target="_blank">DEMO</a>
-        </div>
-        <div class="card-footer text-muted indigo white-text">
-            <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_3" target="_blank">APP CODE</a>
-        </div>
-    </div>
-
-    <!--/.Panel-->
-
-    </div>
-    <!-- Grid column -->
+        <!-- Grid column -->
 
     </div>
     <div class="row">
-        
-    <!-- Grid column -->
-    <div class="col-lg-4 col-md-6  cdiv">
-        <!--Panel-->
-        <div class="card text-center cardh">
-             <div class=" card-header indigo white-text">
-            Lab assistant 4
-        </div>
-        <div class="card-body">
-            <h4 class="card-title">String Manipulation</h4>
+        <!-- Grid column -->
+        <div class="col-lg-4 col-md-6  cdiv">
+            <!--Panel-->
+            <div class="card text-center cardh">
+                <div class=" card-header indigo white-text">
+                    Lab assistant 4
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">String Manipulation</h4>
 
-            <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_4/" target="_blank">DEMO</a>
+                    <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_4/"
+                        target="_blank">DEMO</a>
+                </div>
+                <div class="card-footer text-muted indigo white-text">
+                    <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_4"
+                        target="_blank">APP CODE</a>
+                </div>
+            </div>
         </div>
-        <div class="card-footer text-muted indigo white-text">
-            <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_4" target="_blank">APP CODE</a>
-        </div>
-    </div>
+        
+            <!-- Grid column -->
+            <div class="col-lg-4 col-md-6  cdiv">
+                <!--Panel-->
+                <div class="card text-center cardh">
+                    <div class=" card-header indigo white-text">
+                        Lab assistant 5
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Create a function library and perform operations</h4>
+
+                        <a class="btn btn-indigo btn-sm" href="https://anjacmca.000webhostapp.com/WT_LAB_5/index.html"
+                            target="_blank">DEMO</a>
+                    </div>
+                    <div class="card-footer text-muted indigo white-text">
+                        <a class="mb-0" href="https://github.com/dnshko/web-technology-lab/tree/master/WT_LAB_5"
+                            target="_blank">APP CODE</a>
+                    </div>
+                </div>
+            </div>
     </div>
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
